--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Panda Pawn Shop</title>
 
+<!-- Allow unsafe-eval so Proton SDK can load NFTs -->
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://unpkg.com; style-src 'self' 'unsafe-inline';">
+
 <style>
   body {
     margin: 0;
@@ -12,166 +15,192 @@
     background: #000;
     color: #f5e9ff;
     text-align: center;
-    padding: 40px 20px;
   }
 
   h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    text-shadow: 0 0 8px #bb33ff, 0 0 16px #a020f0;
+    margin-top: 40px;
+    font-size: 2.2em;
+    color: #bb33ff;
+    text-shadow: 0 0 10px #bb33ff, 0 0 20px #a020f0;
+  }
+
+  #walletBar {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 50;
   }
 
   #connectWalletBtn {
-    padding: 14px 28px;
-    font-size: 1.1em;
+    padding: 14px 22px;
+    font-size: 1.05em;
     font-weight: bold;
-    border-radius: 12px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
     background: linear-gradient(135deg, #bb33ff, #7a2bf8);
     color: white;
     box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
     transition: all 0.3s ease;
-    margin-bottom: 20px;
   }
 
   #connectWalletBtn:hover {
-    background: linear-gradient(135deg, #d175ff, #bb33ff);
     transform: scale(1.05);
-    box-shadow: 0 0 24px #bb33ff, 0 0 48px #a020f0;
-  }
-
-  #walletName {
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 1.2em;
-    color: #caffff;
+    box-shadow: 0 0 20px #bb33ff, 0 0 40px #a020f0;
   }
 
   #nftContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 16px;
-    margin-top: 20px;
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    gap: 20px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .nftCard {
-    width: 120px;
-    height: 120px;
-    border: 2px solid #bb33ff;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 0 12px #bb33ff, 0 0 24px #a020f0;
     background: #111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: 2px solid #bb33ff;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: 0 0 12px #bb33ff, 0 0 24px #a020f0;
+    transition: transform 0.2s;
+  }
+
+  .nftCard:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 20px #bb33ff, 0 0 40px #a020f0;
   }
 
   .nftCard img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+    width: 100%;
+    border-radius: 10px;
   }
 
-  @keyframes neonPulse {
-    0%,100% { box-shadow: 0 0 12px #bb33ff,0 0 24px #a020f0; }
-    50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff; }
+  .nftName {
+    margin-top: 8px;
+    font-weight: bold;
+    font-size: 0.95em;
+    color: #fdeecc;
+    text-align: center;
   }
+
 </style>
 </head>
 <body>
 
 <h1>Panda Pawn Shop</h1>
-<button id="connectWalletBtn">Connect Wallet</button>
-<div id="walletName"></div>
+
+<div id="walletBar">
+  <button id="connectWalletBtn">Connect Wallet</button>
+  <div id="walletName" style="margin-top: 10px;"></div>
+</div>
+
 <div id="nftContainer"></div>
 
 <!-- Proton SDK -->
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
 
 <script>
+  const NFT_CONTAINER = document.getElementById('nftContainer');
+  const connectWalletBtn = document.getElementById('connectWalletBtn');
+  const walletNameDisplay = document.getElementById('walletName');
+
+  let protonSession = null;
+  let connectedWallet = null;
+
+  const NFT_SCHEMA = "144534352512"; // replace with your schema if needed
+
+  // Fetch with fallback
   const RPC_ENDPOINTS = [
     "https://proton.eosusa.io",
     "https://proton.greymass.com",
     "https://proton.pink.gg"
   ];
-  const NFT_SCHEMA = "144534352512"; // Replace with your NFT schema
-  let protonSession = null;
-  let connectedWallet = null;
 
   async function fetchWithFallback(path, options) {
     for (let i = 0; i < RPC_ENDPOINTS.length; i++) {
       try {
         const response = await fetch(`${RPC_ENDPOINTS[i]}${path}`, options);
-        if (response.ok) return await response.json();
-      } catch(e) { console.warn(`Endpoint ${RPC_ENDPOINTS[i]} failed:`, e); }
+        if (response.ok) return response;
+      } catch (e) {
+        console.warn(`Endpoint ${RPC_ENDPOINTS[i]} failed`, e);
+      }
     }
-    return null;
-  }
-
-  async function connectWallet() {
-    try {
-      const { session, link } = await window.ProtonWebSDK({
-        linkOptions: { endpoints: RPC_ENDPOINTS, restoreSession: false },
-        selectorOptions: { appName: "Panda Pawn Shop" }
-      });
-      protonSession = session;
-      connectedWallet = session.auth.actor;
-      document.getElementById('walletName').textContent = connectedWallet;
-      document.getElementById('connectWalletBtn').style.display = 'none';
-      await loadNFTs(connectedWallet);
-    } catch (err) {
-      console.error('Wallet connection failed:', err);
-      alert('Failed to connect wallet.');
-    }
+    throw new Error('All endpoints failed');
   }
 
   async function loadNFTs(wallet) {
-    const data = await fetchWithFallback('/v1/chain/get_table_rows', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        json: true,
-        code: 'atomicassets',
-        scope: wallet,
-        table: 'assets',
-        limit: 100
-      })
-    });
-
-    const container = document.getElementById('nftContainer');
-    container.innerHTML = '';
-
-    if (!data || !data.rows || data.rows.length === 0) {
-      container.innerHTML = '<p>No NFTs found in this wallet.</p>';
-      return;
-    }
-
-    const nftRows = data.rows.filter(nft => nft.schema_name === NFT_SCHEMA);
-    if (nftRows.length === 0) {
-      container.innerHTML = '<p>No matching NFTs found for this schema.</p>';
-      return;
-    }
-
-    nftRows.forEach(nft => {
-      const imgUrl = nft.data.img || nft.data.image || nft.data.url || '';
-      const card = document.createElement('div');
-      card.className = 'nftCard';
-      if(imgUrl) {
-        const img = document.createElement('img');
-        img.src = imgUrl;
-        card.appendChild(img);
-      } else {
-        card.textContent = 'No Image';
+    NFT_CONTAINER.innerHTML = 'Loading NFTs...';
+    try {
+      const response = await fetchWithFallback('/v1/chain/get_table_rows', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          json: true,
+          code: 'atomicassets',
+          scope: wallet,
+          table: 'assets',
+          limit: 50
+        })
+      });
+      const data = await response.json();
+      NFT_CONTAINER.innerHTML = '';
+      if (!data.rows || data.rows.length === 0) {
+        NFT_CONTAINER.innerHTML = '<p>No NFTs found in wallet.</p>';
+        return;
       }
-      container.appendChild(card);
-    });
+
+      const nftRows = data.rows.filter(nft => nft.schema_name === NFT_SCHEMA);
+      if (nftRows.length === 0) {
+        NFT_CONTAINER.innerHTML = '<p>No matching NFTs found.</p>';
+        return;
+      }
+
+      nftRows.forEach(nft => {
+        const imgURL = nft.data.img || nft.data.image || nft.template.immutable_data.image || '';
+        const name = nft.name || nft.template.name || 'Unnamed NFT';
+
+        const card = document.createElement('div');
+        card.className = 'nftCard';
+        card.innerHTML = `
+          <img src="${imgURL}" alt="${name}">
+          <div class="nftName">${name}</div>
+        `;
+        NFT_CONTAINER.appendChild(card);
+      });
+    } catch (err) {
+      console.error('Failed to load NFTs', err);
+      NFT_CONTAINER.innerHTML = '<p>Error loading NFTs.</p>';
+    }
   }
 
-  document.getElementById('connectWalletBtn').addEventListener('click', connectWallet);
-</script>
+  async function connectWallet() {
+    connectWalletBtn.textContent = 'Connecting...';
+    connectWalletBtn.disabled = true;
+    try {
+      const { session, link } = await window.ProtonWebSDK({
+        linkOptions: { endpoints: RPC_ENDPOINTS },
+        selectorOptions: { appName: "Panda Pawn Shop" }
+      });
 
+      protonSession = session;
+      connectedWallet = session.auth.actor;
+
+      walletNameDisplay.textContent = connectedWallet;
+      connectWalletBtn.style.display = 'none';
+
+      await loadNFTs(connectedWallet);
+    } catch (err) {
+      console.error('Wallet connect failed', err);
+      connectWalletBtn.textContent = 'Connect Wallet';
+      connectWalletBtn.disabled = false;
+    }
+  }
+
+  connectWalletBtn.addEventListener('click', connectWallet);
+
+</script>
 </body>
 </html>
