--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -5,32 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Panda Pawn Shop</title>
 
-<!-- Allow unsafe-eval so Proton SDK can load NFTs -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://unpkg.com; style-src 'self' 'unsafe-inline';">
-
 <style>
   body {
     margin: 0;
     font-family: 'Orbitron', Arial, sans-serif;
     background: #000;
     color: #f5e9ff;
-    text-align: center;
   }
 
-  h1 {
-    margin-top: 40px;
-    font-size: 2.2em;
-    color: #bb33ff;
-    text-shadow: 0 0 10px #bb33ff, 0 0 20px #a020f0;
-  }
-
-  #walletBar {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 50;
-  }
-
+  #walletBar { position: fixed; top: 20px; left: 20px; z-index: 50; }
   #connectWalletBtn {
     padding: 14px 22px;
     font-size: 1.05em;
@@ -41,166 +24,166 @@
     background: linear-gradient(135deg, #bb33ff, #7a2bf8);
     color: white;
     box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
-    transition: all 0.3s ease;
+    animation: neonPulse 2s infinite;
   }
 
-  #connectWalletBtn:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 20px #bb33ff, 0 0 40px #a020f0;
+  @keyframes neonPulse {
+    0%,100% { box-shadow: 0 0 12px #bb33ff,0 0 26px #a020f0,0 0 48px #bb33ff; }
+    50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff,0 0 90px #d175ff; }
   }
 
-  #nftContainer {
-    margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    gap: 20px;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  .container { max-width: 1200px; margin: 0 auto; padding: 120px 20px 60px; }
+  .title { text-align: center; margin-bottom: 30px; }
+  .title img { max-width: 420px; width: 90%; filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff); animation: titleGlow 2.2s infinite ease-in-out; }
+  @keyframes titleGlow { 0%,100% { filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff); } 50% { filter: drop-shadow(0 0 30px #d175ff) drop-shadow(0 0 60px #bb33ff) drop-shadow(0 0 110px #d175ff); } }
 
-  .nftCard {
-    background: #111;
-    border: 2px solid #bb33ff;
-    border-radius: 15px;
-    padding: 10px;
-    box-shadow: 0 0 12px #bb33ff, 0 0 24px #a020f0;
-    transition: transform 0.2s;
-  }
+  .summary { max-width: 780px; margin: 0 auto 50px; text-align: center; line-height: 1.7; font-size: 1.05em; color: #dacafa; }
+  .section { background: #120c1f; border: 2px solid #7a2bf8; border-radius: 18px; padding: 24px; margin-bottom: 40px; box-shadow: 0 0 24px rgba(122,43,248,0.35); }
+  .section h2 { margin-top: 0; color: #e2c7ff; text-shadow: 0 0 10px #bb33ff; }
 
-  .nftCard:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 0 20px #bb33ff, 0 0 40px #a020f0;
-  }
+  .nft-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 18px; }
+  .nft-card { background: #000; border-radius: 14px; border: 2px solid #453c2c; padding: 12px; text-align: center; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
+  .nft-card:hover { transform: translateY(-4px); box-shadow: 0 0 18px #bb33ff; }
+  .nft-card img { width: 100%; border-radius: 10px; margin-bottom: 8px; }
 
-  .nftCard img {
-    width: 100%;
-    border-radius: 10px;
-  }
+  .preview { text-align: center; }
+  .preview img { max-width: 260px; border-radius: 18px; border: 3px solid #bb33ff; box-shadow: 0 0 28px rgba(187,51,255,0.6); }
 
-  .nftName {
-    margin-top: 8px;
-    font-weight: bold;
-    font-size: 0.95em;
-    color: #fdeecc;
-    text-align: center;
-  }
+  .loan-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap: 18px; }
+  .loan-box { background:#000; border:2px solid #453c2c; border-radius:14px; padding:16px; text-align:center; }
 
+  .action-btn { margin-top: 18px; padding: 14px 28px; border-radius: 12px; border: none; font-size: 1.05em; font-weight: bold; background: linear-gradient(135deg, #bb33ff, #892dff); color: #fff; cursor: pointer; display: inline-flex; align-items: center; gap: 10px; box-shadow: 0 0 22px rgba(187,51,255,0.45); }
+  .action-btn:disabled { opacity: 0.4; cursor: not-allowed; }
+  .action-btn img { width: 28px; height: 28px; }
+
+  .countdown { margin-top: 15px; font-size: 1.1em; color: #ffbfff; }
 </style>
 </head>
 <body>
 
-<h1>Panda Pawn Shop</h1>
-
-<div id="walletBar">
-  <button id="connectWalletBtn">Connect Wallet</button>
-  <div id="walletName" style="margin-top: 10px;"></div>
+<div style="text-align:center;">
+  <button id="connect-wallet-btn" class="green-button">🔗 Connect Wallet</button>
+  <div id="wallet-display"></div>
 </div>
 
-<div id="nftContainer"></div>
+<div class="container">
+  <div class="title">
+    <img src="images/pandapawnshop.jpg" alt="Panda Pawn Shop">
+  </div>
 
-<!-- Proton SDK -->
+  <div class="summary">
+    Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
+    Repay your loan to get your NFT back — or default and the NFT enters a PDA-only auction.
+    <br><br>
+    🐼 Small loans • ⏱ Short terms • 🔥 PDA burned on interest
+  </div>
+
+  <div class="section">
+    <h2>Select NFT to Lend</h2>
+    <div class="nft-grid" id="nftGrid"></div>
+  </div>
+
+  <div class="section preview">
+    <h2>Selected NFT</h2>
+    <img id="selectedNFT" src="">
+    <br>
+    <button class="action-btn" id="lendBtn" disabled>
+      Lend NFT for PDA
+      <img src="images/pda-xprpanda-65x65.png">
+    </button>
+    <div class="countdown" id="countdown"></div>
+  </div>
+
+  <div class="section">
+    <h2>Loan Terms</h2>
+    <div class="loan-grid">
+      <div class="loan-box">⏱ Duration<br><b>72 Hours</b></div>
+      <div class="loan-box">💰 Loan<br><b>5,000 PDA</b></div>
+      <div class="loan-box">🔥 Interest<br><b>5%</b></div>
+      <div class="loan-box">♻ Split<br><b>50% Burn / 50% Vault</b></div>
+    </div>
+  </div>
+</div>
+
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
-
 <script>
-  const NFT_CONTAINER = document.getElementById('nftContainer');
-  const connectWalletBtn = document.getElementById('connectWalletBtn');
-  const walletNameDisplay = document.getElementById('walletName');
+// State
+let session = null;
+let actor = null;
 
-  let protonSession = null;
-  let connectedWallet = null;
+// Load NFTs for wallet (without eval / unsafe-eval)
+async function loadNFTs(wallet) {
+  const nftGrid = document.getElementById("nftGrid");
+  nftGrid.innerHTML = "Loading NFTs...";
 
-  const NFT_SCHEMA = "144534352512"; // replace with your schema if needed
+  try {
+    const resp = await fetch("https://proton.greymass.com/v1/chain/get_table_rows", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        json: true,
+        code: "atomicassets",
+        scope: wallet,
+        table: "assets",
+        limit: 50
+      })
+    });
 
-  // Fetch with fallback
-  const RPC_ENDPOINTS = [
-    "https://proton.eosusa.io",
-    "https://proton.greymass.com",
-    "https://proton.pink.gg"
-  ];
+    const data = await resp.json();
+    nftGrid.innerHTML = "";
 
-  async function fetchWithFallback(path, options) {
-    for (let i = 0; i < RPC_ENDPOINTS.length; i++) {
-      try {
-        const response = await fetch(`${RPC_ENDPOINTS[i]}${path}`, options);
-        if (response.ok) return response;
-      } catch (e) {
-        console.warn(`Endpoint ${RPC_ENDPOINTS[i]} failed`, e);
-      }
+    if (!data.rows || data.rows.length === 0) {
+      nftGrid.innerHTML = "<p>No NFTs found in wallet.</p>";
+      return;
     }
-    throw new Error('All endpoints failed');
-  }
 
-  async function loadNFTs(wallet) {
-    NFT_CONTAINER.innerHTML = 'Loading NFTs...';
-    try {
-      const response = await fetchWithFallback('/v1/chain/get_table_rows', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          json: true,
-          code: 'atomicassets',
-          scope: wallet,
-          table: 'assets',
-          limit: 50
-        })
-      });
-      const data = await response.json();
-      NFT_CONTAINER.innerHTML = '';
-      if (!data.rows || data.rows.length === 0) {
-        NFT_CONTAINER.innerHTML = '<p>No NFTs found in wallet.</p>';
-        return;
-      }
+    data.rows.forEach(nft => {
+      const imgURL = nft.data.img || nft.data.image || (nft.template?.immutable_data?.image || "");
+      const name = nft.name || nft.template?.name || "Unnamed NFT";
 
-      const nftRows = data.rows.filter(nft => nft.schema_name === NFT_SCHEMA);
-      if (nftRows.length === 0) {
-        NFT_CONTAINER.innerHTML = '<p>No matching NFTs found.</p>';
-        return;
-      }
-
-      nftRows.forEach(nft => {
-        const imgURL = nft.data.img || nft.data.image || nft.template.immutable_data.image || '';
-        const name = nft.name || nft.template.name || 'Unnamed NFT';
-
-        const card = document.createElement('div');
-        card.className = 'nftCard';
-        card.innerHTML = `
-          <img src="${imgURL}" alt="${name}">
-          <div class="nftName">${name}</div>
-        `;
-        NFT_CONTAINER.appendChild(card);
-      });
-    } catch (err) {
-      console.error('Failed to load NFTs', err);
-      NFT_CONTAINER.innerHTML = '<p>Error loading NFTs.</p>';
-    }
-  }
-
-  async function connectWallet() {
-    connectWalletBtn.textContent = 'Connecting...';
-    connectWalletBtn.disabled = true;
-    try {
-      const { session, link } = await window.ProtonWebSDK({
-        linkOptions: { endpoints: RPC_ENDPOINTS },
-        selectorOptions: { appName: "Panda Pawn Shop" }
+      const card = document.createElement("div");
+      card.className = "nft-card";
+      card.innerHTML = `<img src="${imgURL}" alt="${name}"><div>${name}</div>`;
+      card.addEventListener("click", () => {
+        document.getElementById("selectedNFT").src = imgURL;
+        document.getElementById("lendBtn").disabled = false;
       });
 
-      protonSession = session;
-      connectedWallet = session.auth.actor;
-
-      walletNameDisplay.textContent = connectedWallet;
-      connectWalletBtn.style.display = 'none';
-
-      await loadNFTs(connectedWallet);
-    } catch (err) {
-      console.error('Wallet connect failed', err);
-      connectWalletBtn.textContent = 'Connect Wallet';
-      connectWalletBtn.disabled = false;
-    }
+      nftGrid.appendChild(card);
+    });
+  } catch (err) {
+    console.error(err);
+    nftGrid.innerHTML = "<p>Error loading NFTs.</p>";
   }
+}
 
-  connectWalletBtn.addEventListener('click', connectWallet);
+// Connect wallet
+async function connectWalletPawnShop() {
+  if (session && actor) return true;
 
+  try {
+    const { session: newSession } = await ProtonWebSDK({
+      linkOptions: { endpoints: ["https://proton.greymass.com"] },
+      selectorOptions: { appName: "Panda Pawn Shop" }
+    });
+
+    session = newSession;
+    actor = session.auth.actor;
+    document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
+
+    // Load NFTs after wallet connects
+    await loadNFTs(actor);
+
+    return true;
+  } catch (err) {
+    console.error("Wallet connection failed:", err);
+    document.getElementById("wallet-display").innerText = `❌ Connect failed: ${err.message}`;
+    return false;
+  }
+}
+
+document.getElementById("connect-wallet-btn").addEventListener("click", connectWalletPawnShop);
 </script>
+
 </body>
 </html>
