--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -13,7 +13,14 @@
     color: #f5e9ff;
   }
 
-  #walletBar { position: fixed; top: 20px; left: 20px; z-index: 50; }
+  /* Wallet Button */
+  #walletBar {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 50;
+  }
+
   #connectWalletBtn {
     padding: 14px 22px;
     font-size: 1.05em;
@@ -32,31 +39,153 @@
     50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff,0 0 90px #d175ff; }
   }
 
-  .container { max-width: 1200px; margin: 0 auto; padding: 120px 20px 60px; }
-  .title { text-align: center; margin-bottom: 30px; }
-  .title img { max-width: 420px; width: 90%; filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff); animation: titleGlow 2.2s infinite ease-in-out; }
-  @keyframes titleGlow { 0%,100% { filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff); } 50% { filter: drop-shadow(0 0 30px #d175ff) drop-shadow(0 0 60px #bb33ff) drop-shadow(0 0 110px #d175ff); } }
+  #walletInfo {
+    margin-top: 10px;
+    font-size: 0.95em;
+    color: #caffff;
+    display: none;
+  }
 
-  .summary { max-width: 780px; margin: 0 auto 50px; text-align: center; line-height: 1.7; font-size: 1.05em; color: #dacafa; }
-  .section { background: #120c1f; border: 2px solid #7a2bf8; border-radius: 18px; padding: 24px; margin-bottom: 40px; box-shadow: 0 0 24px rgba(122,43,248,0.35); }
-  .section h2 { margin-top: 0; color: #e2c7ff; text-shadow: 0 0 10px #bb33ff; }
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 120px 20px 60px;
+  }
 
-  .nft-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 18px; }
-  .nft-card { background: #000; border-radius: 14px; border: 2px solid #453c2c; padding: 12px; text-align: center; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
-  .nft-card:hover { transform: translateY(-4px); box-shadow: 0 0 18px #bb33ff; }
-  .nft-card img { width: 100%; border-radius: 10px; margin-bottom: 8px; }
+  .title {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
-  .preview { text-align: center; }
-  .preview img { max-width: 260px; border-radius: 18px; border: 3px solid #bb33ff; box-shadow: 0 0 28px rgba(187,51,255,0.6); }
+  .title img {
+    max-width: 420px;
+    width: 90%;
+    filter: drop-shadow(0 0 18px #bb33ff)
+            drop-shadow(0 0 36px #a020f0)
+            drop-shadow(0 0 64px #bb33ff);
+    animation: titleGlow 2.2s infinite ease-in-out;
+  }
 
-  .loan-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap: 18px; }
-  .loan-box { background:#000; border:2px solid #453c2c; border-radius:14px; padding:16px; text-align:center; }
+  @keyframes titleGlow {
+    0%,100% {
+      filter: drop-shadow(0 0 18px #bb33ff)
+              drop-shadow(0 0 36px #a020f0)
+              drop-shadow(0 0 64px #bb33ff);
+    }
+    50% {
+      filter: drop-shadow(0 0 30px #d175ff)
+              drop-shadow(0 0 60px #bb33ff)
+              drop-shadow(0 0 110px #d175ff);
+    }
+  }
 
-  .action-btn { margin-top: 18px; padding: 14px 28px; border-radius: 12px; border: none; font-size: 1.05em; font-weight: bold; background: linear-gradient(135deg, #bb33ff, #892dff); color: #fff; cursor: pointer; display: inline-flex; align-items: center; gap: 10px; box-shadow: 0 0 22px rgba(187,51,255,0.45); }
-  .action-btn:disabled { opacity: 0.4; cursor: not-allowed; }
-  .action-btn img { width: 28px; height: 28px; }
+  .summary {
+    max-width: 780px;
+    margin: 0 auto 50px;
+    text-align: center;
+    line-height: 1.7;
+    font-size: 1.05em;
+    color: #dacafa;
+  }
 
-  .countdown { margin-top: 15px; font-size: 1.1em; color: #ffbfff; }
+  .section {
+    background: #120c1f;
+    border: 2px solid #7a2bf8;
+    border-radius: 18px;
+    padding: 24px;
+    margin-bottom: 40px;
+    box-shadow: 0 0 24px rgba(122,43,248,0.35);
+  }
+
+  .section h2 {
+    margin-top: 0;
+    color: #e2c7ff;
+    text-shadow: 0 0 10px #bb33ff;
+  }
+
+  .nft-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    gap: 18px;
+  }
+
+  .nft-card {
+    background: #000;
+    border-radius: 14px;
+    border: 2px solid #453c2c;
+    padding: 12px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .nft-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 0 18px #bb33ff;
+  }
+
+  .nft-card img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 8px;
+  }
+
+  .preview {
+    text-align: center;
+  }
+
+  .preview img {
+    max-width: 260px;
+    border-radius: 18px;
+    border: 3px solid #bb33ff;
+    box-shadow: 0 0 28px rgba(187,51,255,0.6);
+  }
+
+  .loan-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    gap: 18px;
+  }
+
+  .loan-box {
+    background:#000;
+    border:2px solid #453c2c;
+    border-radius:14px;
+    padding:16px;
+    text-align:center;
+  }
+
+  .action-btn {
+    margin-top: 18px;
+    padding: 14px 28px;
+    border-radius: 12px;
+    border: none;
+    font-size: 1.05em;
+    font-weight: bold;
+    background: linear-gradient(135deg, #bb33ff, #892dff);
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 0 0 22px rgba(187,51,255,0.45);
+  }
+
+  .action-btn:disabled {
+    opacity: 0.4;
+    cursor: not-allowed;
+  }
+
+  .action-btn img {
+    width: 28px;
+    height: 28px;
+  }
+
+  .countdown {
+    margin-top: 15px;
+    font-size: 1.1em;
+    color: #ffbfff;
+  }
 </style>
 </head>
 <body>
@@ -106,12 +235,19 @@
 </div>
 
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
+
 <script>
-// State
 let session = null;
 let actor = null;
 
-// Load NFTs for wallet (without eval / unsafe-eval)
+// Convert ipfs:// to https
+function fixIPFS(url) {
+  if (!url) return "";
+  if (url.startsWith("ipfs://")) return "https://ipfs.io/ipfs/" + url.slice(7);
+  return url;
+}
+
+// Load NFTs from wallet (CSP-safe)
 async function loadNFTs(wallet) {
   const nftGrid = document.getElementById("nftGrid");
   nftGrid.innerHTML = "Loading NFTs...";
@@ -138,7 +274,8 @@ async function loadNFTs(wallet) {
     }
 
     data.rows.forEach(nft => {
-      const imgURL = nft.data.img || nft.data.image || (nft.template?.immutable_data?.image || "");
+      let imgURL = nft.data.img || nft.data.image || (nft.template?.immutable_data?.image || "");
+      imgURL = fixIPFS(imgURL);
       const name = nft.name || nft.template?.name || "Unnamed NFT";
 
       const card = document.createElement("div");
@@ -171,8 +308,7 @@ async function connectWalletPawnShop() {
     actor = session.auth.actor;
     document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
 
-    // Load NFTs after wallet connects
-    await loadNFTs(actor);
+    await loadNFTs(actor); // Load NFTs automatically after connect
 
     return true;
   } catch (err) {
