--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Panda Pawn Shop</title>
 
+<!-- Minimal CSP allowing Proton SDK -->
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://unpkg.com https://proton.greymass.com; style-src 'self' 'unsafe-inline'; img-src * data: blob:; connect-src *;">
+
 <style>
   body {
     margin: 0;
@@ -13,7 +16,7 @@
     color: #f5e9ff;
   }
 
-   /* Wallet Button */
+  /* Wallet Button */
   #walletBar {
     position: fixed;
     top: 20px;
@@ -235,18 +238,19 @@
 </div>
 
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
+
 <script>
 let session = null;
 let actor = null;
 
-// IPFS fix
+// Convert ipfs:// to https
 function fixIPFS(url) {
   if (!url) return "";
   if (url.startsWith("ipfs://")) return "https://ipfs.io/ipfs/" + url.slice(7);
   return url;
 }
 
-// Load NFTs from AtomicAssets
+// Load NFTs (CSP-safe)
 async function loadNFTs(wallet) {
   const nftGrid = document.getElementById("nftGrid");
   nftGrid.innerHTML = "Loading NFTs...";
@@ -275,7 +279,7 @@ async function loadNFTs(wallet) {
     data.rows.forEach(nft => {
       let imgURL = nft.data.img || nft.data.image || (nft.template?.immutable_data?.image || "");
       imgURL = fixIPFS(imgURL);
-      const name = nft.data.name || nft.template?.name || "Unnamed NFT";
+      const name = nft.name || nft.template?.name || "Unnamed NFT";
 
       const card = document.createElement("div");
       card.className = "nft-card";
@@ -293,26 +297,25 @@ async function loadNFTs(wallet) {
   }
 }
 
-// Connect wallet & load NFTs
+// Connect wallet (must be called directly from user click)
 async function connectWalletPawnShop() {
-  if (session && actor) return true;
-
   try {
-    const newSession = await ProtonWebSDK({
+    const { session: newSession } = await ProtonWebSDK({
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
-        appName: "Panda Pawn Shop"
+        appName: "Panda Pawn Shop",
+        appLogo: "images/pandapawnshop.jpg"
       }
     });
 
     session = newSession;
-    actor = session.auth.actor;
+    if (!session?.auth?.actor) throw new Error("Wallet connection failed");
 
+    actor = session.auth.actor;
     document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
 
-    // Load NFTs
-    loadNFTs(actor);
-
+    // Load NFTs automatically after wallet connect
+    await loadNFTs(actor);
     return true;
   } catch (err) {
     console.error("Wallet connection failed:", err);
@@ -321,9 +324,9 @@ async function connectWalletPawnShop() {
   }
 }
 
+// Only user-initiated click
 document.getElementById("connect-wallet-btn").addEventListener("click", connectWalletPawnShop);
 </script>
-
 
 </body>
 </html>
