Update logo image in Panda Pawn Shop HTML

--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="container">
-  <div class="title"><img src="images/pandapawnshop.jpg" alt="Panda Pawn Shop"></div>
+  <div class="title"><img src="images/x-icon/pda-xprpanda-65x65.png" alt="Panda Pawn Shop"></div>
   <div class="summary">
     Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
     Repay your loan to get your NFT back — or default and the NFT enters a PDA-only auction.
